[tool.poetry]
name = "autonomous_systems_project"
version = "0.1.0"
description = ""
authors = ["Alessandro Pacielli <alessandropacielli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.5.1"
gym = "^0.17.2"
matplotlib = "^3.2.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
