[tool.poetry]
name = "autonomous_systems_project"
version = "0.1.0"
description = ""
authors = ["Alessandro Pacielli <alessandropacielli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
torchvision = "^0.7.0"
gym = "^0.17.2"
jupyter = "^1.0.0"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
