[tool.poetry]
name = "autonomous_systems_project"
version = "0.1.0"
description = ""
authors = ["Alessandro Pacielli <alessandropacielli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.6.0"
torchvision = "^0.7.0"
gym = "^0.17.2"
jupyter = "^1.0.0"
numpy = "^1.19.1"
matplotlib = "^3.3.0"
tqdm = "^4.48.2"
mlflow = "^1.11.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
isort = "^5.2.2"
black = "^19.10b0"
mypy = "^0.782"
tensorboard = "^2.3.0"
mlflow = "^1.11.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
